make it responsive

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
+    "@types/react-avatar-editor": "^10.3.5",
+    "@types/react-color": "^3.0.4",
     "emoji-mart": "^3.0.0",
     "firebase": "^8.2.4",
     "md5": "^2.3.0",
